--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,15 +1,10 @@
-@media screen and (min-width: 600px) {
+@media (min-width: 600px) {
     header {
-        background-color: var(--main-color);
-        width: 80%;
         display: flex;
         flex-direction: row;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
     }
 
     header img {
-        width: 100px;
         padding: 1rem;
         margin-left: auto;
         margin-right: 0;
