--- a/styles/base.css
+++ b/styles/base.css
@@ -78,14 +78,19 @@ main h2 {
     border-bottom-color: var(--accent-color);
 }
 
+#cardSpace {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+}
+
 .card {
     display: block;
     border-style: solid;
     border-width: 2px;
     border-radius: 10px;
     border-color: var(--main-color);
-    margin-top: 25px;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     border-bottom-width: 5px;
     border-bottom-color: var(--accent-color);
 }
@@ -102,9 +107,9 @@ main h2 {
 }
 
 .card p {
+    font-size: 0.9rem;
     color: var(--secondary-color);
     font-family: var(--text-font);
-    font-weight: bold;
 }
 
 ul {
