--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,4 +1,5 @@
-@media (min-width: 600px) {
+@media (min-width: 640px) {
+
     header {
         display: flex;
         flex-direction: row;
@@ -32,17 +33,27 @@
         flex-direction: row;
     }
 
+    #cardSpace {
+        width: 95%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 3fr 2fr;
+        grid-gap: 1rem;
+    }
+
+    .card p {
+        font-size: 1rem;
+    }
+
     ul {
         font-family: var(--text-font);
         color: var(--secondary-color);
-        list-style: none;
     }
     
     li {
         padding: 3px;
         font-size: 1rem;
         margin: 0 auto;
-        text-align: center;
     }
 
     footer p {
