--- a/styles/base.css
+++ b/styles/base.css
@@ -7,8 +7,8 @@
     --text-color: #ffe6d1;
     --hover-color: #f9be9f;
 
-    --text-font: Comfortaa;
-    --title-font: Play;
+    --text-font: Comfortaa, Arial;
+    --title-font: Play, Helvetica;
 }
 
 body {
@@ -28,6 +28,7 @@ header {
 
 header img {
     width: 100px;
+    height: 136px;
     padding-top: 2rem;
     margin-left: auto;
     margin-right: auto;
@@ -119,10 +120,11 @@ ul {
 }
 
 li {
-    padding: 3px;
+    padding: 5px;
     font-size: 0.75rem;
     margin: 0 auto;
     text-align: left;
+    font-weight: bold;
 }
 
 footer {
