--- a/styles/base.css
+++ b/styles/base.css
@@ -43,16 +43,28 @@ header h1 {
     margin-top: 0.5rem;
 }
 
+#menu {
+    display: grid;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0.5rem;
+    text-decoration-line: none;
+}
+
+#menu::before {
+    color: var(--text-color);
+    content: '≡';
+}
+
+#current {
+    text-decoration-line: underline;
+    text-decoration-color: var(--hover-color);
+}
+
 nav {
     background-color: var(--secondary-color);
-    text-align: center;
     width: 80%;
     margin: 0 auto;
-    height: 250px;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
 }
 
 nav a {
@@ -63,6 +75,31 @@ nav a {
 
 nav a:hover {
     color: var(--hover-color);
+}
+
+.navigation {
+    display: none;
+    background-color: var(--secondary-color);
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    height: 250px;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    text-decoration-line: none;
+}
+
+.navigation a {
+    text-decoration-line: none;
+}
+
+.show {
+    display: grid;
+}
+
+#menu.show::before {
+    content: '✖';
 }
 
 main {
@@ -125,6 +162,12 @@ li {
     margin: 0 auto;
     text-align: left;
     font-weight: bold;
+}
+
+iframe {
+    width: 90%;
+    margin: 0 auto;
+    padding-bottom: 1rem;
 }
 
 footer {
