--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -136,4 +136,27 @@
         margin-bottom: 2vw;
         font-size: 1.8vw;
     }
+
+    /** Slider **/
+    .switchbox {
+        margin-top: 12.5vh;
+    }
+
+    .switch {
+        width: 60px;
+        height: 34px;
+    }
+
+    .slider:before {
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+      }
 }
