--- a/styles/base.css
+++ b/styles/base.css
@@ -28,7 +28,7 @@ header {
 
 header img {
     width: 100px;
-    height: 136px;
+    height: auto;
     padding-top: 2rem;
     margin-left: auto;
     margin-right: auto;
@@ -109,38 +109,27 @@ main {
 }
 
 .hero {
-    display: grid;
-    grid-template-rows: 30% 40% 30%;
-    grid-template-columns: 1fr 4fr 1fr;
-    align-items: center;
+    position: relative;
 }
 
 #overlay {
+    position: absolute;
     z-index: 1;
-    margin: 0 auto;
-    padding: 0.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    left: 50%;
+    top: 10%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    padding: 0.5em;
     background-color: var(--secondary-color);
-    font-family: var(--title-font);
-    color: var(--text-color);
-    border-radius: 0.5rem;
     border-width: 5px;
     border-style: solid;
+    border-radius: 0.5em;
     border-color: var(--main-color);
-    font-size: 100%;
-    opacity: 80%;
-    grid-row: 3/4;
-    grid-column: 2/3;
-    width: auto;
-    align-self: center;
+    font-family: var(--title-font);
+    color: var(--text-color);
     font-size: 90%;
-    margin-bottom: 0.5rem;
-}
-
-picture {
-    grid-row: 1/4;
-    grid-column: 1/4;
+    opacity: 85%;
+    
 }
 
 picture img{
