--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -106,22 +106,25 @@ main {
 
 .hero {
     display: grid;
-    grid-template-rows: 15% 35% 35% 15%;
+    grid-template-rows: 1fr 3fr 3fr 1fr;
     grid-template-columns: 1fr 4fr 1fr;
     align-items: center;
     grid-row: 1/2;
     grid-column: 1/4;
 }
 
-.hero > img {
-    content: url(../images/coast_small.webp);
-    aspect-ratio: auto;
+.hero > picture {
     margin: 0 auto;
     width: 100%;
     grid-row: 1/5;
     grid-column: 1/4;
-    opacity: 0.6;
+    opacity: 0.7;
     z-index: -1;
+}
+
+.hero > picture > img {
+    width: 100%;
+    height: auto;
 }
 
 .hero > h1 {
@@ -155,6 +158,10 @@ main {
 
 .hero > a:hover {
     color: var(--hover-color);
+}
+
+.weatherspace {
+    font-size: 120%;
 }
 
 .weatherspace, .spotlightspace {
@@ -229,6 +236,8 @@ main {
 }
 
 footer {
+    display: grid;
+    grid-template-columns: 1fr 2fr 16fr 1fr;
     color: var(--text-color);
     background-color: var(--main-color);
     margin-top: 2vw;
@@ -236,13 +245,33 @@ footer {
     text-align: center;
 }
 
-footer h3 {
-    font-weight: 400;
-    font-family: var(--title-font);
+#logo {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    align-content: center;
+    margin: auto;
 }
 
-footer p {
+#logo > img {
+    width: 70px;
+    height: auto;
+    padding: 5px;
+}
+
+.footer-info {
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+
+.footer-info h3 {
+    font-weight: 400;
+    font-family: var(--title-font);
+    font-size: 80%;
+}
+
+.footer-info p {
     font-family: var(--text-font);
+    font-size: 80%;
 }
 
 /** Slider **/
