--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -176,4 +176,28 @@
         -ms-transform: translateX(26px);
         transform: translateX(26px);
       }
+
+    /** Discover Page **/
+    .discover {
+        display: grid;
+        grid-template-columns: 3fr 4fr;
+        grid-template-rows: auto auto;
+        grid-gap: 2rem;
+        grid-column: 1/4;
+    }
+
+    .discover-info {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+
+    .discover-images {
+        grid-row: 2/3;
+        grid-column: 2/3;
+    }
+
+    .discover-images .card:hover {
+        transform: scale(1.025);
+        transition-duration: 0.1s;
+    }
 }
