--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -180,16 +180,26 @@
     /** Discover Page **/
     .discover {
         display: grid;
+        grid-template-rows: auto auto;
         grid-template-columns: 3fr 4fr;
         grid-gap: 2rem;
         grid-column: 1/4;
     }
 
+    #discoverh1 {
+        grid-row: 1/2;
+        grid-column: 1/3;
+        font-size: 250%;
+        width: 30rem;
+    }
+
     .discover-info {
+        grid-row: 2/3;
         grid-column: 1/2;
     }
 
     .discover-images {
+        grid-row: 2/3;
         grid-column: 2/3;
     }
 
