--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -186,11 +186,19 @@
         grid-column: 1/4;
     }
 
-    #discoverh1 {
+    .discover > h1 {
+        color: var(--text-color);
+        font-family: var(--title-font);
+        background-color: var(--main-color);
+        margin: 0 auto;
+        text-align: center;
+        padding: 2vh;
+        width: 30rem;
+        margin-top: 3vh;
+        margin-bottom: 2vw;
+        font-size: 250%;
         grid-row: 1/2;
         grid-column: 1/3;
-        font-size: 250%;
-        width: 30rem;
     }
 
     .discover-info {
