--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -279,12 +279,12 @@ footer {
 }
 
 /** Discover Page **/
-.discover {
+.discover, .join, .thanks {
     padding: 2rem;
     justify-content: center;
 }
 
-.discover > h1 {
+.discover > h1, .join > h1, .thanks > h1 {
     color: var(--text-color);
     font-family: var(--title-font);
     background-color: var(--main-color);
@@ -297,7 +297,7 @@ footer {
     font-size: 150%;
 }
 
-.discover .card {
+.discover .card, .join .card {
     height: auto;
     margin-bottom: 2rem;
 }
@@ -311,6 +311,134 @@ footer {
 #calendar {
     width: 100%;
     height: auto;
+}
+
+/** Join Page **/
+.join section {
+    height: auto;
+}
+
+.join-info p{
+    font-size: 85%;
+}
+
+.join-form {
+    position: relative;
+}
+
+ul {
+    font-family: var(--text-font);
+    color: var(--text-color);
+    font-size: 80%;
+}
+
+form {
+    margin: 1rem;
+}
+
+fieldset {
+    color: var(--text-color);
+    padding: 1rem 2rem;
+    border-color: var(--accent-color);
+    border-style: solid;
+    border-width: 3px;
+}
+
+form legend {
+    font-family: var(--text-font);
+    font-size: 120%;
+    padding: 0.5rem;
+}
+
+form label, form div {
+    display: block;
+    color: var(--text-color);
+    font-family: var(--title-font);
+    font-size: 110%;
+}
+
+form div {
+    padding-bottom: 0.7rem;
+}
+
+.membership {
+    font-family: var(--text-font);
+    font-size: 100%;
+    padding-top: 0.6rem;
+    padding-bottom: 1.2rem;
+    margin-left: 1rem;
+}
+
+input[type="text"], input[type="email"], input[type="tel"], textarea {
+    display: block;
+    padding: 0.7rem 5%;
+    width: 90%;
+    margin-bottom: 1rem;
+    border: none;
+    outline: none;
+}
+
+input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus, textarea:focus {
+    outline: solid;
+    outline-width: 3px;
+    outline-color: var(--accent-color);
+}
+
+textarea {
+    height: 10rem;
+}
+
+.button-div {
+    position: relative;
+    padding: 2rem;
+}
+
+button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--main-color);
+    color: var(--text-color);
+    padding: 0.7rem 1.5rem;
+    border: none;
+    margin-bottom: 1rem;
+    box-shadow: 0vh 0vh 5px 5px var(--shadow-color);
+    width: 100%;
+}
+
+/** Thanks Page **/
+.thanks > h1 {
+    width: auto;
+    padding: 1.5rem 2.5rem;
+}
+
+#thanks-message {
+    background-color: var(--secondary-color);
+    border-style: solid;
+    border-width: 4px;
+    border-color: var(--main-color);
+    border-bottom-color: var(--accent-color);
+    height: auto;
+}
+
+#thanks-message > h1 {
+    background-color: var(--main-color);
+    color: var(--text-color);
+    font-family: var(--title-font);
+    font-size: 160%;
+    margin: 0 auto;
+    padding: 1rem 2rem;
+    padding-bottom: 2vh;
+    text-align: center;
+}
+
+#thanks-message > h2 {
+    font-family: var(--text-font);
+    color: var(--text-color);
+    text-align: center;
+    margin: 2rem;
+    font-size: 120%;
 }
 
 /** Slider **/
