--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -154,6 +154,126 @@
         font-size: 90%;
     }
 
+    /** Discover Page **/
+    .discover {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: 3fr 4fr;
+        grid-gap: 2rem;
+        grid-column: 1/4;
+    }
+
+    .discover > h1, .join > h1 {
+        width: 30rem;
+        font-size: 250%;
+        grid-row: 1/2;
+        grid-column: 1/3;
+    }
+
+    .discover-info {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+
+    .discover-images {
+        grid-row: 2/3;
+        grid-column: 2/3;
+    }
+
+    .discover-images .card:hover, .join-info .card:hover {
+        transform: scale(1.025);
+        transition-duration: 0.1s;
+    }
+
+    /** Join Page **/
+    .join {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: 3fr 3fr;
+        grid-gap: 2rem;
+        grid-column: 1/4;
+    }
+
+    .join-info {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+
+    .join-info p{
+        font-size: 100%;
+    }
+
+    .join-form {
+        grid-row: 2/3;
+        grid-column: 2/3;
+    }
+
+    ul {
+        font-size: 90%;
+    }
+
+    .join-form > section {
+        height: auto;
+    }
+
+    fieldset {
+        padding: 0.5rem 1rem;
+        margin-bottom: 1rem;
+    }
+    
+    form legend {
+        font-size: 100%;
+    }
+    
+    form label, form div {
+        font-size: 110%;
+    }
+    
+    form div {
+        padding-bottom: 1rem;
+    }
+    
+    .membership {
+        font-size: 100%;
+        padding-top: 0;
+        padding-bottom: 1rem;
+        margin-left: 1rem;
+    }
+    
+    input[type="text"], input[type="email"], input[type="tel"], textarea {
+        display: block;
+        padding: 0.3rem 2%;
+        width: 96%;
+        max-width: 25rem;
+        margin-bottom: 1rem;
+        border: none;
+        outline: none;
+    }
+    
+    input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus, textarea:focus {
+        outline: solid;
+        outline-width: 3px;
+        outline-color: var(--accent-color);
+    }
+
+    .businessDescription {
+        padding-top: 1rem;
+    }
+    
+    textarea {
+        height: 10rem;
+    }
+
+    button {
+        width: 75%;
+    }
+
+    /** Thanks Page **/
+    .thanks {
+        margin: 0 auto;
+        grid-column: 1/4;
+    }
+
     /** Slider **/
     .switchbox {
         margin-top: 9.5vh;
@@ -176,43 +296,4 @@
         -ms-transform: translateX(26px);
         transform: translateX(26px);
       }
-
-    /** Discover Page **/
-    .discover {
-        display: grid;
-        grid-template-rows: auto auto;
-        grid-template-columns: 3fr 4fr;
-        grid-gap: 2rem;
-        grid-column: 1/4;
-    }
-
-    .discover > h1 {
-        color: var(--text-color);
-        font-family: var(--title-font);
-        background-color: var(--main-color);
-        margin: 0 auto;
-        text-align: center;
-        padding: 2vh;
-        width: 30rem;
-        margin-top: 3vh;
-        margin-bottom: 2vw;
-        font-size: 250%;
-        grid-row: 1/2;
-        grid-column: 1/3;
-    }
-
-    .discover-info {
-        grid-row: 2/3;
-        grid-column: 1/2;
-    }
-
-    .discover-images {
-        grid-row: 2/3;
-        grid-column: 2/3;
-    }
-
-    .discover-images .card:hover {
-        transform: scale(1.025);
-        transition-duration: 0.1s;
-    }
 }
