Chamber Directory Page

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -279,12 +279,12 @@ footer {
 }
 
 /** Discover Page **/
-.discover, .join, .thanks {
-    padding: 2rem;
+.discover, .join, .thanks, .directory {
+    padding: 1rem;
     justify-content: center;
 }
 
-.discover > h1, .join > h1, .thanks > h1 {
+h1 {
     color: var(--text-color);
     font-family: var(--title-font);
     background-color: var(--main-color);
@@ -297,7 +297,7 @@ footer {
     font-size: 150%;
 }
 
-.discover .card, .join .card {
+.discover .card, .join .card, .directory .card {
     height: auto;
     margin-bottom: 2rem;
 }
@@ -439,6 +439,90 @@ button {
     text-align: center;
     margin: 2rem;
     font-size: 120%;
+}
+
+/** Directory Page **/
+.directory {
+    display: flex;
+    flex-direction: column;
+}
+
+.directory > .card {
+    text-align: center;
+}
+
+.directory > .card > img {
+    margin-top: 0.5rem;
+    width: 200px;
+    height: auto;
+}
+
+.directory p {
+    margin: 0;
+}
+
+.directory a {
+    display: block;
+    font-family: var(--text-font);
+    color: var(--text-color);
+    padding: 0.4rem;
+    padding-top: 1rem;
+}
+
+.directory .card a {
+    margin: 0 auto;
+    width: fit-content;
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
+}
+
+.directory ul {
+    list-style: none;
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.directory li {
+    background-color: var(--secondary-color);
+}
+
+.directory ul > :nth-child(odd) {
+    background-color: var(--main-color);
+}
+
+.directory li {
+    padding: 0.4rem;
+    width: auto;
+}
+
+.directory li > p {
+    padding: 0.3rem;
+}
+
+/** Directory Button **/
+.buttons {
+    display: flex;
+    flex-direction: row;
+    grid-column: 1/4;
+    margin: 0 auto;
+    align-content: center;
+    justify-content: center;
+    gap: 2rem;
+    padding-top: 1rem;
+}
+
+#grid-button, #list-button {
+    position: static;
+    transform: translate(0, 0);
+    margin-bottom: 0;
+    box-shadow: none;
+}
+
+.active {
+    outline: 3px;
+    outline-style: solid;
+    outline-color: var(--accent-color);
 }
 
 /** Slider **/
