--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -97,6 +97,39 @@ nav {
     border-color: var(--accent-color);
 }
 
+#meet-banner {
+    text-align: center;
+    margin: 0 auto;
+}
+
+#meet-banner p {
+    margin-top: 3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    color: var(--text-color);
+    font-family: var(--text-font);
+    font-size: 100%;
+}
+
+#meet-button {
+    position: static;
+    display: block;
+    transform: translate(0%, 0%);
+    background-color: var(--background-color);
+    font-family: var(--title-font);
+    color: var(--text-color);
+    font-size: 150%;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+    box-shadow: none;
+    padding: 0.3rem;
+    width: 2.5rem;
+}
+
+#meet-button:hover {
+    color: var(--hover-color);
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -189,10 +222,31 @@ main {
 
 .eventspace > div {
     display: grid;
-    grid-gap: 2vh;
+    column-gap: 1rem;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
+}
+
+#forecast {
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+}
+
+#forecast section {
+    width: 10rem;
+    text-align: center;
+    font-size: 90%;
+    color: var(--text-color);
+    font-family: var(--text-font);
+    margin: 0 auto;
+}
+
+#forecast section img {
+    width: 50px;
+    height: auto;
 }
 
 .card {
@@ -401,6 +455,10 @@ button {
     margin-bottom: 1rem;
     box-shadow: 0vh 0vh 5px 5px var(--shadow-color);
     width: 100%;
+}
+
+input:valid {
+    background-color: #daffda;
 }
 
 /** Thanks Page **/
