--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -39,6 +39,11 @@
         height: 87vh;
     }
 
+    #forecast {
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+    }
+
     .eventspace {
         grid-row: 2/3;
         grid-column: 2/4;
