--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -25,16 +25,12 @@
         margin: 0 auto;
     }
 
-    .nav-small {
-        display: none;
-    }
-
-    .nav-top {
+    .navigation {
         display: flex;
         flex: auto;
         flex-direction: row;
         align-items: center;
-        justify-content: center;
+        justify-content: space-around;
         font-size: 3vh;
         grid-row: 1/2;
         grid-column: 1/4;
@@ -43,6 +39,16 @@
         border-style: solid;
         border-color: var(--accent-color);
         z-index: 1;
+    }
+
+    .navigation a {
+        text-decoration: none;
+        margin-top: 0.6rem;
+    }
+
+    .navigation a:hover {
+        color: var(--hover-color);
+        text-decoration: underline;
     }
 
     .nav-bottom {
