Many Small Improvements

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Gabarito|Titillium+Web");
 
-@media (min-width: 900px) {
+@media (min-width: 960px) {
     :root {
         --main-color: #683571;
         --secondary-color: #512466;
@@ -8,122 +8,66 @@
         --text-color: #ffe78e;
         --hover-color: #ffc86a;
         --background-color: #38175a;
+        --slider-color: #ffe78e;
+        --slider-background: #f4a321;
         --shadow-color: rgb(56, 23, 90, 0.75);
 
         --text-font: 'Titillium Web', Arial;
         --title-font: Gabarito, Helvetica;
+
+        background-color: var(--background-color);
+        font-family: var(--text-font);
+        color: var(--text-color);
+        text-align: center;
+        margin: 0 auto;
     }
 
-    main {
+    /** Hero **/
+    .hero > h1 {
+        width: 60%;
+        font-size: 200%;
+        padding: 1.2rem 2rem;
+    }
+
+    .hero > a {
+        font-size: 200%;
+        padding: 1rem 2rem;
+        transform: translate(0%, -75%);
+    }
+
+    /** Home **/
+    .large-grid {
+        display: grid;
+        grid-template-columns: 3fr 4fr;
+        grid-template-rows: auto auto;
+    }
+
+    .weather {
+        margin-top: 2rem;
+    }
+
+    #forecast {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
     }
 
-    .hero > a {
-        font-size: 3vw;
-        padding: 3vh;
-        margin-bottom: 5vw;
+    /** Discover **/
+    .discover {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 
-    .weatherspace {
-        font-size: 150%;
-        grid-row: 2/3;
-        grid-column: 1/2;
+    .flex-grid {
+        grid-column: 1/3;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        grid-template-rows: auto;
+        text-align: center;
     }
 
-    .eventspace > div > .card {
-        height: 40vh;
-    }
-
-    .weatherspace > div > .card {
-        height: 87vh;
-    }
-
-    #forecast {
-        margin-top: 5rem;
-        margin-bottom: 2rem;
-    }
-
-    .eventspace {
-        grid-row: 2/3;
-        grid-column: 2/4;
-    }
-
-    .spotlightspace {
-        grid-row: 3/4;
-        grid-column: 1/4;
-    }
-
-    footer {
-        grid-template-columns: 3fr 2fr 4fr 3fr;
-    }
-
-    .footer-info h3 {
-        font-size: 110%;
-    }
-    
-    .footer-info p {
-        font-size: 110%;
-    }
-
-    h1 {
-        grid-column: 1/4;
-    }
-
-    /** Join Page **/
+    /** Join **/
     .join {
         display: grid;
-        grid-template-rows: auto auto;
-        grid-template-columns: 3fr 3fr;
-    }
-
-    .join-info p{
-        font-size: 110%;
-    }
-
-    ul {
-        font-size: 100%;
-    }
-
-    form legend {
-        font-size: 120%;
-    }
-
-    form label, form div {
-        font-size: 135%;
-    }
-
-    .membership {
-        font-size: 120%;
-        padding-top: 0;
-        padding-bottom: 1rem;
-        margin-left: 2rem;
-    }
-
-    input[type="text"], input[type="email"], input[type="tel"], textarea {
-        display: block;
-        padding: 0.7rem;
-        width: 90%;
-        max-width: 25rem;
-        margin-bottom: 1.6rem;
-        border: none;
-        outline: none;
-    }
-
-    button {
-        width: 50%;
-        max-width: 15rem;
-    }
-
-    /** Directory Page **/
-    .directory {
-        grid-column: 1/4;
-        grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-    }
-
-    .directory > .card > img {
-        margin: 1rem;
-        width: 320px;
-        height: auto;
+        grid-template-columns: 2fr 3fr;
     }
 }
