--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -13,44 +13,76 @@
 
     --text-font: 'Titillium Web', Arial;
     --title-font: Gabarito, Helvetica;
-}
 
-body {
     background-color: var(--background-color);
+    font-family: var(--text-font);
+    color: var(--text-color);
+    text-align: center;
 }
-
-nav {
-    background-color: var(--main-color);
-    display: flex;
-    flex-direction: column;
-}
-
-#menu {
-    background-color: var(--main-color);
+/** General **/
+a {
+    font-family: var(--text-font);
+    color: var(--text-font);
+    padding: 1rem;
     margin: 0 auto;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    padding-left: 42vw;
-    padding-right: 42vw;
     text-decoration: none;
 }
 
-#menu::before {
-    color: var(--text-color);
-    font-size: 3vh;
-    content: '≡';
+h1 {
+    font-family: var(--title-font);
+    background-color: var(--main-color);
+    padding: 0.8rem 1.6rem;
+    width: fit-content;
+    min-width: 15rem;
+    margin: 2rem auto;
+    font-size: 250%;
 }
 
+h2 {
+    font-family: var(--title-font);
+    background-color: var(--main-color);
+    padding: 0.5rem 0.8rem;
+    width: fit-content;
+    min-width: 8rem;
+    margin: 1rem auto;
+    font-size: 125%;
+}
+
+h3 {
+    background-color: var(--main-color);
+    color: var(--text-color);
+    font-family: var(--title-font);
+    font-size: 2rem;
+    margin: 0 auto;
+    padding: 1rem;
+    padding-bottom: 2rem;
+    text-align: center;
+}
+
+ul {
+    font-family: var(--text-font);
+    color: var(--text-color);
+    font-size: 80%;
+}
+
+li {
+    text-align: left;
+    padding: 0.4rem;
+    width: auto;
+    padding: 0.3rem;
+}
+
+.current {
+    text-decoration: underline;
+    text-decoration-color: var(--hover-color);
+}
+
+/** Navigation **/
 .navigation {
     display: none;
     text-align: center;
-    font-size: 125%; 
-}
-
-.navigation a {
-    padding-bottom: 1rem;
-    color: var(--text-color);
-    font-family: var(--text-font);
+    font-size: 135%;
+    background-color: var(--secondary-color);
 }
 
 .show {
@@ -58,83 +90,30 @@ nav {
     flex-direction: column;
 }
 
-#menu.show::before {
+.menu {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    background-color: var(--main-color);
+}
+
+.menu::before {
     color: var(--text-color);
-    font-size: 3vh;
+    font-size: 1.4rem;
+    content: '≡';
+}
+
+.menu.show::before {
+    color: var(--text-color);
+    font-size: 1.4rem;
     content: '✖';
 }
 
-.nav-bottom {
-    background-color: var(--secondary-color);
-    grid-row: 2/3;
-    grid-column: 1/4;
-}
-
-.nav-bottom a {
-    display: none;
-}
-
-.nav-top a, .nav-bottom a {
-    color: var(--text-color);
-    text-decoration: none;
-    font-family: var(--text-font);
-    margin: 0 auto;
-    text-align: center;
-}
-
-.nav-top a:hover, .nav-bottom a:hover {
-    color: var(--hover-color);
-    border-width: 0;
-    border-bottom-width: 2px;
-    border-style: dotted;
-    border-color: var(--accent-color);
-}
-
-#meet-banner {
-    text-align: center;
-    margin: 0 auto;
-}
-
-#meet-banner p {
-    margin-top: 3rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    color: var(--text-color);
-    font-family: var(--text-font);
-    font-size: 100%;
-}
-
-#meet-button {
-    position: static;
-    display: block;
-    transform: translate(0%, 0%);
-    background-color: var(--background-color);
-    font-family: var(--title-font);
-    color: var(--text-color);
-    font-size: 150%;
-    margin: 0 auto;
-    margin-bottom: 1rem;
-    box-shadow: none;
-    padding: 0.3rem;
-    width: 2.5rem;
-}
-
-#meet-button:hover {
-    color: var(--hover-color);
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-}
-
+/** Hero **/
 .hero {
     display: grid;
     grid-template-rows: 1fr 3fr 3fr 1fr;
     grid-template-columns: 1fr 4fr 1fr;
-    align-items: center;
     grid-row: 1/2;
     grid-column: 1/4;
 }
@@ -156,22 +135,21 @@ main {
 .hero > h1 {
     margin: 0 auto;
     text-align: center;
-    font-size: 5vw;
+    font-size: 1rem;
     font-family: var(--title-font);
     color: var(--text-color);
-    padding: 1vh;
-    margin-top: 10vw;
+    padding: 0.5rem 1rem;
     background-color: var(--main-color);
     box-shadow: 0vh 0vh 4vw 2vw var(--shadow-color);
     grid-row: 2/3;
     grid-column: 2/3;
+    align-self: center;
 }
 
 .hero > a {
-    font-size: 4vw;
+    font-size: 1.5rem;
     margin: 0 auto;
-    padding: 2vw;
-    margin-bottom: 12vw;
+    padding: 0.5rem 1rem;
     color: var(--text-color);
     background-color: var(--main-color);
     font-family: var(--text-font);
@@ -180,120 +158,51 @@ main {
     text-decoration: none;
     grid-row: 3/4;
     grid-column: 2/3;
+    align-self: center;
 }
 
 .hero > a:hover {
     color: var(--hover-color);
 }
 
-.weatherspace {
-    font-size: 120%;
-}
-
-.weatherspace, .spotlightspace {
-    display: flex;
-    flex-direction: column;
-    flex: auto;
-    margin-bottom: 4vh;
-}
-
-.eventspace {
-    margin-bottom: 4vh;
-}
-
-.weather p {
-    margin: 0.5rem;
-}
-
-.weather img {
-    display: block;
-    text-align: center;
-    margin: 0 auto;
-    width: 75px;
-    height: auto;
-}
-
-.eventspace > div {
-    display: grid;
-    column-gap: 1rem;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-}
-
-#forecast {
-    display: flex;
-    flex-direction: column;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-}
-
-#forecast section {
-    width: 10rem;
-    text-align: center;
-    font-size: 90%;
-    color: var(--text-color);
-    font-family: var(--text-font);
-    margin: 0 auto;
-}
-
-#forecast section img {
-    width: 50px;
-    height: auto;
-}
-
+/** Cards **/
 .card {
     background-color: var(--secondary-color);
     height: auto;
-    min-height: 30vh;
+    min-height: 15rem;
     border-style: solid;
     border-width: 4px;
     border-color: var(--main-color);
     border-bottom-color: var(--accent-color);
+    margin: 1rem;
     margin-bottom: 2rem;
+    padding-bottom: 1rem;
 }
 
-.card p {
-    padding: 5px;
+.card img {
+    padding-top: 1rem;
+    width: 240px;
+    height: auto;
 }
 
-.card > h3 {
-    background-color: var(--main-color);
-    color: var(--text-color);
-    font-family: var(--title-font);
-    font-size: 4vw;
-    margin: 0 auto;
-    padding: 1vh;
-    padding-bottom: 2vh;
-    text-align: center;
+.discover img {
+    width: 100%;
+    height: auto;
 }
 
-.card > p {
-    color: var(--text-color);
-    font-family: var(--text-font);
-    text-align: center;
+img.weather-icon {
+    width: 50px;
+    height: auto;
 }
 
-.label {
-    color: var(--text-color);
-    font-family: var(--title-font);
-    background-color: var(--main-color);
-    margin: 0 auto;
-    text-align: center;
-    padding: 2vh;
-    width: 50vw;
-    margin-top: 3vh;
-    margin-bottom: 2vw;
-    font-size: 5vw;
-}
-
+/** Footer **/
 footer {
     display: grid;
     grid-template-columns: 1fr 2fr 16fr 1fr;
     color: var(--text-color);
     background-color: var(--main-color);
-    margin-top: 2vw;
-    padding: 1vw;
+    margin-top: 2rem;
+    padding: 1rem;
     text-align: center;
 }
 
@@ -304,75 +213,24 @@ footer {
     margin: auto;
 }
 
-#logo > img {
+#logo img {
     width: 70px;
     height: auto;
-    padding: 5px;
 }
 
 .footer-info {
     grid-row: 1/2;
     grid-column: 3/4;
-}
-
-.footer-info h3 {
-    font-weight: 400;
-    font-family: var(--title-font);
-    font-size: 80%;
-}
-
-.footer-info p {
-    font-family: var(--text-font);
-    font-size: 80%;
-}
-
-/** Discover Page **/
-.discover, .join, .thanks, .directory {
-    padding: 1rem;
-    justify-content: center;
-}
-
-h1 {
-    color: var(--text-color);
-    font-family: var(--title-font);
-    background-color: var(--main-color);
-    margin: 0 auto;
-    text-align: center;
-    padding: 2vh;
-    width: 60vw;
-    margin-top: 3vh;
-    margin-bottom: 2vw;
-    font-size: 150%;
-}
-
-.discover-images img {
-    margin: 0 auto;
-    width: 100%;
-    height: auto;
-}
-
-#calendar {
-    width: 100%;
-    height: auto;
+    padding: 0.5rem 1rem;
 }
 
 /** Join Page **/
-.join section {
-    height: auto;
-}
-
 .join-info p{
     font-size: 85%;
 }
 
 .join-form {
     position: relative;
-}
-
-ul {
-    font-family: var(--text-font);
-    color: var(--text-color);
-    font-size: 80%;
 }
 
 form {
@@ -416,7 +274,7 @@ form div {
 
 input[type="text"], input[type="email"], input[type="tel"], textarea {
     display: block;
-    padding: 0.7rem 5%;
+    padding: 0.7rem 0.7rem;
     width: 90%;
     margin-bottom: 1rem;
     border: none;
@@ -438,7 +296,7 @@ textarea {
     padding: 2rem;
 }
 
-button {
+form button {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -456,100 +314,31 @@ input:valid {
     background-color: #daffda;
 }
 
-/** Thanks Page **/
-.thanks > h1 {
-    width: auto;
-    padding: 1.5rem 2.5rem;
+fieldset {
+    text-align: left;
 }
 
-#thanks-message {
-    background-color: var(--secondary-color);
-    border-style: solid;
-    border-width: 4px;
-    border-color: var(--main-color);
-    border-bottom-color: var(--accent-color);
-    height: auto;
-}
-
-#thanks-message > h1 {
-    background-color: var(--main-color);
-    color: var(--text-color);
-    font-family: var(--title-font);
-    font-size: 160%;
-    margin: 0 auto;
-    padding: 1rem 2rem;
-    padding-bottom: 2vh;
-    text-align: center;
-}
-
-#thanks-message > h2 {
-    font-family: var(--text-font);
-    color: var(--text-color);
-    text-align: center;
-    margin: 2rem;
-    font-size: 120%;
-}
-
-/** Directory Page **/
-.directory, #spotlight {
-    display: flex;
-    flex-direction: column;
-}
-
-.directory > .card, #spotlight > .card {
-    text-align: center;
-}
-
-.directory > .card > img, #spotlight > .card > img {
-    margin-top: 0.5rem;
-    width: 200px;
-    height: auto;
-}
-
-.directory p, #spotlight p {
-    margin: 0;
-}
-
-.directory a, #spotlight a {
+/** Members List **/
+#directory a {
     display: block;
-    font-family: var(--text-font);
-    color: var(--text-color);
-    padding: 0.4rem;
-    padding-top: 1rem;
+    padding: 0 0 0.5rem 0;
 }
 
-.directory .card a, #spotlight .card a {
-    margin: 0 auto;
-    width: fit-content;
-    padding-top: 1rem;
-    padding-bottom: 1.5rem;
-}
-
-.directory ul {
+#directory ul {
     list-style: none;
     width: 80%;
     margin: 0 auto;
     padding: 0;
 }
 
-.directory li {
-    background-color: var(--secondary-color);
-}
-
-.directory ul > :nth-child(odd) {
+#directory ul > :nth-child(odd) {
     background-color: var(--main-color);
 }
 
-.directory li {
-    padding: 0.4rem;
-    width: auto;
+#directory li {
+    padding: 0.5rem;
 }
 
-.directory li > p {
-    padding: 0.3rem;
-}
-
-/** Directory Button **/
 .buttons {
     display: flex;
     flex-direction: row;
@@ -562,9 +351,14 @@ input:valid {
 }
 
 #grid-button, #list-button {
+    background-color: var(--main-color);
+    color: var(--text-color);
+    font-family: var(--text-font);
+    border: none;
+    padding: 0.5rem 1rem;
     position: static;
     transform: translate(0, 0);
-    margin-bottom: 0;
+    margin-bottom: 1rem;
     box-shadow: none;
 }
 
@@ -574,23 +368,18 @@ input:valid {
     outline-color: var(--accent-color);
 }
 
-/** Slider **/
-.switchbox {
-    margin-top: 7.5vh;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 2;
-    height: 250vh;
+.thanks {
+    padding: 1rem;
 }
 
+/** Sliders & Buttons **/
 .switch {
-  position: sticky;
+  position: fixed;
   display: inline-block;
   width: 40px;
   height: 23px;
   top: 10px;
-  right: 10px;
+  right: 25px;
 }
 
 .switch input {
@@ -631,16 +420,28 @@ input:checked + .slider:before {
     background-color: var(--slider-color);
   }
 
-input:focus + .slider {
-  box-shadow: 0 0 10px var(--shadow-color);
-}
-
-input:checked + .slider {
-    box-shadow: 0 0 10px var(--shadow-color);
-  }
-
 input:checked + .slider:before {
   -webkit-transform: translateX(17px);
   -ms-transform: translateX(17px);
   transform: translateX(17px);
+}
+
+#meet-button {
+    position: static;
+    display: block;
+    transform: translate(0%, 0%);
+    background-color: var(--background-color);
+    font-family: var(--title-font);
+    color: var(--text-color);
+    font-size: 150%;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+    box-shadow: none;
+    padding: 0.3rem;
+    width: 2.5rem;
+    border: none;
+}
+
+#meet-button:hover {
+    color: var(--hover-color);
 }
