--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -22,6 +22,12 @@
         margin: 0 auto;
     }
 
+    /** General **/
+    .hover:hover {
+        transform: scale(1.02);
+        transition-duration: 0.1s;
+    }
+
     /** Hero **/
     .hero > h1 {
         width: 60%;
@@ -33,6 +39,11 @@
         font-size: 200%;
         padding: 1rem 2rem;
         transform: translate(0%, -75%);
+    }
+
+    .hero > a:hover {
+        transform: translate(0%, -75%) scale(1.03);
+        transition-duration: 0.1s;
     }
 
     /** Home **/
